Fix searchbar overflow
Gets rid of that weird growth under the searchbar that overflows its container

--- a/src/ui/sass/modules/_SearchBar.scss
+++ b/src/ui/sass/modules/_SearchBar.scss
@@ -54,6 +54,7 @@
   &-form
   {
     display: flex;
+    margin: 0;
   }
 
   &-input
